--- a/app/src/main/res/layout/create_alert_fragment.xml
+++ b/app/src/main/res/layout/create_alert_fragment.xml
@@ -300,6 +300,39 @@
                         </Switch>
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        tools:ignore="UseSwitchCompatOrMaterialXml">
+
+                        <ImageView
+
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="right"
+                            android:src="@drawable/baseline_cloudy_snowing_black_20">
+
+                        </ImageView>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="40dp"
+                            android:text="Medio ambiente"
+                            android:textSize="20sp"/>
+
+                        <Switch
+                            android:id="@+id/affectedEnviroment"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_gravity="right"
+                            android:layout_marginStart="@dimen/cardview_default_elevation">
+
+                        </Switch>
+                    </LinearLayout>
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/lAfectationsRangeId"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
@@ -339,7 +372,7 @@
                         android:layout_height="200dp"
                         android:layout_marginTop="15dp"
                         android:paddingStart="@dimen/activity_horizontal_margin"
-                        android:src="@drawable/profile">
+                        android:src="@drawable/no_photo">
 
                     </ImageView>
 
@@ -358,7 +391,9 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
-
+    <include
+        android:id="@+id/loader"
+        layout="@layout/loading"/>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:layout_width="match_parent"
