--- a/app/src/main/res/layout/fragment_data_protection_content.xml
+++ b/app/src/main/res/layout/fragment_data_protection_content.xml
@@ -8,10 +8,12 @@
     tools:context=".ui.data_protection.DataProtectionContentFragment">
 
     <TextView
+        android:textAlignment="textStart"
+        android:padding="20dp"
         android:id="@+id/textView"
-        android:layout_gravity="center_horizontal"
+        android:justificationMode="inter_word"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/data_tratamiento" />
 
 </FrameLayout>
