--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#D11FEF</color>
+    <color name="primary">#9C27B0</color>
     <color name="secondary">#FF9800</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#9C27B0</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_200">#2196F3</color>
+    <color name="teal_700">#9C27B0</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
