--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AlercomApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.AlercomApp" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#912482</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,8 +14,10 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.AlercomAppActionBar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AlercomAppActionBar" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
+
+
         <item name="colorPrimary">#912482</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
